Fix Swagger implementation and add delete method
