# controllers/medicine/Responses.go
@@ -1,0 +1,5 @@
+package medicine
+
+type MessageResponse struct {
+  Message string `json:"message"`
+}
